adaptor base64 routine to java 8